fix: fix buttons overlap on cardProduct (removing unnecessary fixed card height in px)

--- a/src/spa/view/pages/catalogPage/cardProduct/cardProduct.scss
+++ b/src/spa/view/pages/catalogPage/cardProduct/cardProduct.scss
@@ -7,7 +7,6 @@
     flex-direction: column;
     align-items: center;
     row-gap: 5px;
-    height: 330px;
     width: 220px;
     transition: all 0.3s;
     border-radius: 10px;
